# pydantic-schemaforms-demo

./: .dockerignore  .env-sample  .gitignore  CLAUDE.md  CONSOLIDATION_SUMMARY.md  DEVCONTAINER_LIB_EXAMPLES_SYNC.md  Dockerfile  README.md  alembic.ini  bumpcalver-history.json  makefile  pyproject.toml  report.xml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: demo-sync-receiver.yml
data/: schemaforms_analytics.sqlite  schemaforms_analytics.sqlite-shm  schemaforms_analytics.sqlite-wal
docker-compose/: .env-sample  docker-compose.yml
examples/: README.md  __init__.py  fastapi_example.py  nested_forms_example.py  shared_models.py
examples/templates/: form.html  home.html  shared_base.html  success.html
examples/templates/archive_old/: README.md  base.html  bootstrap_complex.html  bootstrap_medium.html  bootstrap_minimal.html  bootstrap_pets.html  dynamic.html  fastapi_error.html  fastapi_home.html  fastapi_login.html  fastapi_pets.html  flask_error.html  flask_home.html  flask_login.html  flask_pets.html  index.html  layouts.html  login.html  material_complex.html  material_layouts.html  material_medium.html  material_minimal.html  material_pets.html  pets.html  showcase.html  user.html
examples/templates/archive_old/bootstrap/: base.html  index.html  medium.html  minimal.html
examples/templates/archive_old/components/: bootstrap_forms.html
migrations/: env.py
migrations/versions/: 26_3_6_1_ip_geo_cache_queue.py  26_3_7_1_26_3_7_1.py  26_3_7_5_26_3_7_5.py  26_3_7_6_26_3_7_6.py  26_3_8_1_26_3_8_1.py  26_3_8_3_26_3_8_3.py  26_4_24_1_26_4_24_1.py  26_6_27_1_26_6_27_1.py  26_6_28_1_26_6_28_1.py
scripts/: docker_entrypoint.sh  smoke_live_server.py  sync-lib-examples.sh
src/: __init__.py  analytics.py  ip_geo_service.py  ip_geo_store.py  ip_geo_worker.py  ip_location.py  main.py  models.py  nested_forms_models.py
src/templates/: 404.html  500.html  central_dashboard.html  dashboard.html  form.html  home.html  ip_modal.html  live_validation.html  shared_base.html  success.html
tests/: ip.py  test_dashboard_auth.py  test_forms_smoke.py
