[project]
name = "demo-pydantic-schemaforms"
version = "26.1.28.3"
requires-python = ">=3.14"
description = "Demo application showcasing pydantic-schemaforms library capabilities"
readme = "README.md"
dependencies = [ "fastapi[all]>=0.128.0", "pydantic>=2.7", "pydantic-schemaforms>=26.1.1b0", "pydantic-extra-types[all]>=2.10.6", "uvicorn>=0.40.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "Mike Ryan"

[project.license]
file = "LICENSE"

[project.urls]
Repository = "https://github.com/devsetgo/demo-pydantic-schemaforms"

[tool.ruff]
line-length = 100
indent-width = 4
unsafe-fixes = true
target-version = "py312"
src = [ "src", "examples",]
exclude = [ ".git", "__pycache__", "*.egg-info", ".pytest_cache", ".venv", "htmlcov",]

[tool.flake8]
max-line-length = 100
max-doc-length = 100
ignore = [ "E302", "E501", "E303",]
exclude = [ ".git", "__pycache__", "docs", "build", "tests", "_venv", "htmlcov", "scripts", ".pytest_cache", ".vscode", "dist", "*.egg-info",]

[tool.isort]
src_paths = [ "src", "examples",]
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[tool.bumpcalver]
version_format = "{current_date}.{build_count}"
date_format = "%y.%-m.%-d"
timezone = "America/New_York"
git_tag = true
auto_commit = false
beta_format = "b{beta_count}"
[[tool.bumpcalver.file]]
path = "makefile"
file_type = "makefile"
variable = "APP_VERSION"
version_standard = "python"

[[tool.bumpcalver.file]]
path = "pyproject.toml"
file_type = "toml"
variable = "project.version"
version_standard = "python"

[[tool.bumpcalver.file]]
path = "src/__init__.py"
file_type = "python"
variable = "__version__"
version_standard = "python"

[tool.black]
line-length = 100
target-version = [ "py312",]
exclude = "(\n    /(\n        \\.git\n      | \\.venv\n      | __pycache__\n      | htmlcov\n      | \\.pytest_cache\n    )/\n)\n"

[tool.ruff.lint]
select = [ "C", "F", "E", "W", "B",]
ignore = [ "C901", "E501", "B017", "B904", "B008", "I",]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.coverage.run]
source = [ "src", "examples",]
omit = [ "*.py[cod]", "__pycache__", "htmlcov/*",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if __name__", "def main",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
python_files = [ "test_*.py",]
addopts = [ "-v", "--tb=short",]
filterwarnings = [ "ignore::DeprecationWarning",]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401", "F403",]
